--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -262,10 +262,9 @@
 			<newWizardShortcut id="org.jboss.tools.central.wizards.NewRichfacesProjectWizard"/>
 			<newWizardShortcut id="org.jboss.tools.central.wizards.NewSpringMvcProjectWizard"/>
 			<newWizardShortcut id="org.jboss.tools.central.wizards.NewGwtProjectWizard"/>
+			<!-- Hibernate Run Code Generation Toolbar -->
+         	<actionSet id="org.hibernate.eclipse.launch.actionset"/>
 		</perspectiveExtension>
    </extension>
-   
-   
-   
    
 </plugin>
