JBIDE-10750 and JBIDE-10604 add JPA and Profiles Mgmt maven features
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39120 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -133,6 +133,40 @@
                url="http://www.jboss.org/tools">
          </overview>
       </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.maven"
+            groupId="org.jboss.tools.central.discovery.maven.configurators"
+            description="JBoss Maven JPA Configurator"
+            id="org.jboss.tools.maven.jpa.feature"
+            kind="task"
+            license="Free, EPL"
+            name="JBoss Maven JPA Configurator"
+            provider="JBoss by Red Hat"
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+         <icon
+               image32="images/jbosstools_icon32.png">
+         </icon>
+         <overview
+               url="http://www.jboss.org/tools">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.maven"
+            groupId="org.jboss.tools.central.discovery.maven.configurators"
+            description="Maven Profile Management UI"
+            id="org.jboss.tools.maven.profiles.feature"
+            kind="task"
+            license="Free, EPL"
+            name="Maven Profile Management UI"
+            provider="JBoss by Red Hat"
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+         <icon
+               image32="images/jbosstools_icon32.png">
+         </icon>
+         <overview
+               url="http://www.jboss.org/tools">
+         </overview>
+      </connectorDescriptor>
       
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.maven"
