JBIDE-11120 : copy GenericCommandActionDelegate.java here to fix Maven Profile selection
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39262 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.profiles.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.profiles.ui/plugin.xml
@@ -33,7 +33,7 @@
                           objectClass="org.eclipse.core.resources.IProject"
                           adaptable="true">
          <action id="org.jboss.tools.maven.ui.commands.selectMavenProfileAction"
-                 class="org.jboss.tools.maven.ui.generic.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
+                 class="org.jboss.tools.maven.profiles.ui.internal.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
                  label="%Select_Maven_Profiles_Menu"
                  style="push"
                  definitionId="org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
@@ -51,7 +51,7 @@
                           objectClass="org.eclipse.core.resources.IFile"
                           adaptable="true">
          <action id="org.jboss.tools.maven.ui.commands.selectMavenProfileAction"
-                 class="org.jboss.tools.maven.ui.generic.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
+                 class="org.jboss.tools.maven.profiles.ui.internal.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
                  label="%Select_Maven_Profiles_Menu"
                  style="push"
                  definitionId="org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
@@ -66,7 +66,7 @@
       	     adaptable="true"
              objectClass="org.eclipse.ui.IWorkingSet">
          <action id="org.jboss.tools.maven.ui.commands.selectMavenProfileAction"
-                 class="org.jboss.tools.maven.ui.generic.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
+                 class="org.jboss.tools.maven.profiles.ui.internal.GenericCommandActionDelegate:org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
                  label="%Select_Maven_Profiles_Menu"
                  style="push"
                  definitionId="org.jboss.tools.maven.ui.commands.selectMavenProfileCommand"
