--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -23,7 +23,7 @@
             license="Free, EPL"
             name="JBoss Maven Integration"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -40,7 +40,7 @@
             license="Free, EPL"
             name="JBoss Maven CDI Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -57,7 +57,7 @@
             license="Free, EPL"
             name="JBoss Maven Hibernate Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -74,7 +74,7 @@
             license="Free, EPL"
             name="JBoss Maven JAX-RS Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -91,7 +91,7 @@
             license="Free, EPL"
             name="JBoss Maven JSF Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -108,7 +108,7 @@
             license="Free, EPL"
             name="JBoss Maven Portlet Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -125,7 +125,7 @@
             license="Free, EPL"
             name="JBoss Maven Seam Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -142,7 +142,7 @@
             license="Free, EPL"
             name="JBoss Maven JPA Configurator"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -159,7 +159,7 @@
             license="Free, EPL"
             name="Maven Profile Management UI"
             provider="JBoss by Red Hat"
-            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo">
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/">
          <icon
                image32="images/jbosstools_icon32.png">
          </icon>
@@ -222,7 +222,7 @@
             license="Free, EPL"
             name="Eclipse EGit"
             provider="eclipse.org"
-            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/SR2">
+            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/SR2/">
          <icon
                image32="images/egit_32.png">
          </icon>
@@ -257,12 +257,13 @@
             id="org.jboss.tools.central.discovery.testing"
             name="Testing"
             relevance="60">
- 			<group id="bundled" /> 
- 			<group id="extra" />
+ 			<group id="org.jboss.tools.central.discovery.testing.local" />
+ 			<group id="org.jboss.tools.central.discovery.testing.remote" />
       </connectorCategory>
       
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
+            groupId="org.jboss.tools.central.discovery.testing.local"
             description="Tool support for FindBugs"
             id="edu.umd.cs.findbugs.plugin.eclipse"
             kind="task"
@@ -279,27 +280,7 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
-            description="Tool support for JRebel"
-            id="org.zeroturnaround.eclipse.feature"
-            kind="task"
-            license="Commercial"
-            name="JRebel"
-            provider="zeroturnaround.org"
-            siteUrl="http://www.zeroturnaround.com/update-site/">
-            <iu id="org.zeroturnaround.eclipse.feature"/>
-            <iu id="org.zeroturnaround.eclipse.nature.feature"/>
-            <iu id="org.zeroturnaround.eclipse.debug.feature"/>
-            <iu id="org.zeroturnaround.eclipse.wtp.feature"/>
-            <iu id="org.zeroturnaround.eclipse.embedder.feature"/>
-         <icon
-               image32="images/jrebel_32.png">
-         </icon>
-         <overview
-               url="http://zeroturnaround.com/jrebel/current/">
-         </overview>
-      </connectorDescriptor>
-      <connectorDescriptor
-            categoryId="org.jboss.tools.central.discovery.testing"
+            groupId="org.jboss.tools.central.discovery.testing.local"
             description="Tool support for JSLint"
             id="com.rockstarapps.workbench.branding.feature"
             kind="task"
@@ -321,6 +302,7 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
+            groupId="org.jboss.tools.central.discovery.testing.local"
             description="Tool support for PMD"
             id="net.sourceforge.pmd.eclipse"
             kind="task"
@@ -337,6 +319,7 @@
       </connectorDescriptor>
 	  <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
+            groupId="org.jboss.tools.central.discovery.testing.local"
             description="Tool support for TestNG"
             id="org.testng.eclipse"
             kind="task"
@@ -353,6 +336,28 @@
                url="http://testng.org/">
          </overview>
       </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.testing"
+            groupId="org.jboss.tools.central.discovery.testing.remote"
+            description="Tool support for JRebel - requires JST Server"
+            id="org.zeroturnaround.eclipse.feature"
+            kind="task"
+            license="Commercial"
+            name="JRebel"
+            provider="zeroturnaround.org"
+            siteUrl="http://www.zeroturnaround.com/update-site/">
+            <iu id="org.zeroturnaround.eclipse.feature"/>
+            <iu id="org.zeroturnaround.eclipse.nature.feature"/>
+            <iu id="org.zeroturnaround.eclipse.debug.feature"/>
+            <iu id="org.zeroturnaround.eclipse.wtp.feature"/>
+            <iu id="org.zeroturnaround.eclipse.embedder.feature"/>
+         <icon
+               image32="images/jrebel_32.png">
+         </icon>
+         <overview
+               url="http://zeroturnaround.com/jrebel/current/">
+         </overview>
+      </connectorDescriptor>
       
       <!-- Web -->
 
@@ -361,20 +366,43 @@
             id="org.jboss.tools.central.discovery.web"
             name="Web Development"
             relevance="60">
- 			<group id="bundled" /> 
- 			<group id="extra" />
+ 			<group id="org.jboss.tools.central.discovery.web.core" /> 
+ 			<group id="org.jboss.tools.central.discovery.web.extras" />
       </connectorCategory>
 
-      <!-- TODO: change URL to http://download.jboss.org/jbosstools/updates/indigo/ for/after Beta1 -->
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.web"
+            groupId="org.jboss.tools.central.discovery.web.core"
+            description="JST Server Core, UI, Adapters, Extensions, User Doc"
+            id="org.eclipse.jst.server_core.feature"
+            kind="task"
+            license="Free, EPL, Other"
+            name="JST Server"
+            provider="Eclipse.org"
+            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/SR2/">
+            <iu id="org.eclipse.jst.server_adapters.ext.feature"/>
+            <iu id="org.eclipse.jst.server_adapters.feature"/>
+            <iu id="org.eclipse.jst.server_core.feature"/>
+            <iu id="org.eclipse.jst.server_ui.feature"/>
+            <iu id="org.eclipse.jst.server_userdoc.feature"/>
+         <icon
+               image32="images/wtp_32.png">
+         </icon>
+         <overview
+               url="http://eclipse.org/webtools/">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.web"
+            groupId="org.jboss.tools.central.discovery.web.extras"
             description="Google Plugin for Eclipse (GPE) + Google Web Toolkit SDK (GWT)"
             id="com.google.gwt.eclipse.sdkbundle.e37.feature"
             kind="task"
             license="EPL, Other"
             name="Google Plugin + Web Toolkit"
             provider="Google, Inc."
-            siteUrl="http://download.jboss.org/jbosstools/updates/requirements/gwt/2.5.0.v201201120043-rel-r37/">
+            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/SR2/">
             <iu id="com.google.gwt.eclipse.sdkbundle.e37.feature"/>
             <iu id="com.google.gdt.eclipse.suite.e37.feature"/>
          <icon
@@ -386,6 +414,7 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.web"
+            groupId="org.jboss.tools.central.discovery.web.extras"
             description="Tool support for the Spring Framework"
             id="org.springframework.ide.eclipse.feature"
             kind="task"
@@ -407,6 +436,8 @@
                url="http://www.springsource.com/developer">
          </overview>
       </connectorDescriptor>
+      
+      <!-- TODO: change URLs from http://download.jboss.org/jbosstools/updates/indigo/SR2/ to http://download.jboss.org/jbosstools/updates/indigo/ after Beta1 -->
       
 	</extension>
 </plugin>
