org.eclipse.jst.server_adapters.ext.feature is not needed; exclude from connector for JBT and JBDS
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39348 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -388,14 +388,14 @@
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.web"
             groupId="org.jboss.tools.central.discovery.web.core"
-            description="JST Server Core, UI, Adapters, Extensions, User Doc"
+            description="JST Server Core, UI, Adapters, User Doc"
             id="org.eclipse.jst.server_core.feature"
             kind="task"
             license="Free, EPL, Other"
             name="JST Server"
             provider="Eclipse.org"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/SR2/">
-            <iu id="org.eclipse.jst.server_adapters.ext.feature"/>
+            <!-- <iu id="org.eclipse.jst.server_adapters.ext.feature"/> -->
             <iu id="org.eclipse.jst.server_adapters.feature"/>
             <iu id="org.eclipse.jst.server_core.feature"/>
             <iu id="org.eclipse.jst.server_ui.feature"/>
