JBIDE-10596: Move to eclipse-repository instead of eclipse-update-site
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39511 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/site/pom.xml
+++ b/examples/site/pom.xml
@@ -11,5 +11,5 @@
 	<artifactId>examples.site</artifactId>
 	<name>examples.site</name>
 	
-	<packaging>eclipse-update-site</packaging>
+	<packaging>eclipse-repository</packaging>
 </project>
