--- a/maven/site/pom.xml
+++ b/maven/site/pom.xml
@@ -11,5 +11,5 @@
 	<artifactId>maven.site</artifactId>
 	<name>maven.site</name>
 	
-	<packaging>eclipse-update-site</packaging>
+	<packaging>eclipse-repository</packaging>
 </project>
