JBIDE-11443 - AS 7.1.1 added into downloadable Runtimes list
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39956 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -91,6 +91,13 @@
     <extension
          point="org.jboss.tools.project.examples.downloadruntimes">
       <runtime
+            id="org.jboss.tools.runtime.core.as.711" 
+            name="JBoss AS 7.1.1 Certified Java EE 6 Full Profile"
+            version="7.1.1.Final"
+            size="127MB"
+            url="http://download.jboss.org/jbossas/7.1/jboss-as-7.1.1.Final/jboss-as-7.1.1.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
+      <runtime
             id="org.jboss.tools.runtime.core.as.710" 
             name="JBoss AS 7.1.0 Certified Java EE 6 Full Profile"
             version="7.1.0.Final"
