https://issues.jboss.org/browse/JBIDE-11244 Auto-discover all the modules and add them to the configuration on GWT project import included org.jboss.tools.maven.gwt plugin and org.eclipse.maven.gwt.feature into build
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39975 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -24,7 +24,8 @@
 		<module>org.jboss.tools.maven.jaxrs.feature</module>
 		<module>org.jboss.tools.maven.jbosspackaging.feature</module>	
 		<module>org.jboss.tools.maven.jpa.feature</module>
-		<module>org.jboss.tools.maven.profiles.feature</module>        
+		<module>org.jboss.tools.maven.profiles.feature</module>
+		<module>org.jboss.tools.maven.gwt.feature</module>
      </modules>
 
 	<repositories>
