--- a/maven/plugins/org.jboss.tools.maven.core/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.properties
@@ -8,6 +8,8 @@ Maven_JSF_1_2_Libraries=Maven JSF 1.2 Libraries
 Maven_JSF_1_1_Libraries=Maven JSF 1.1 Libraries
 Maven_JSF_2_0_Libraries=Maven JSF 2.0 Libraries
 Hibernate_3_3_2_Libraries=Hibernate 3.3.2 Libraries
+Hibernate_3_6_X_Libraries=Hibernate 3.6.10 Libraries
+Hibernate_4_1_X_Libraries=Hibernate 4.1.0 Libraries
 Maven_Portlet_1_0_Libraries=Maven Portlet 1.0 Libraries
 Maven_Portlet_2_0_Libraries=Maven Portlet 2.0 Libraries
 Maven_Portletbridge_2_0_0_ALPHA_Libraries=Maven Portletbridge 2.0.0 ALPHA Libraries
