--- a/maven/plugins/org.jboss.tools.maven.core/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.xml
@@ -156,7 +156,57 @@
       		</enablement>
     	</provider>
   	</extension>
-  	
+  	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
+    	<provider id="hibernate41X-maven-library-provider" extends="maven-library-provider">
+      		<label>%Hibernate_4_1_X_Libraries</label>
+      		<param name="template" value="platform:/plugin/org.jboss.tools.maven.core/poms/hibernate41X-template.xml"/>
+      		<enablement>
+      		  <and>
+        		<with variable="projectFacets">
+          			<test property="org.jboss.tools.maven.core.projectFacets" value="jpt.jpa,jboss.m2" forcePluginActivation="true"/>
+        		</with>
+        		<with variable="requestingProjectFacet">
+                    <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:2.0" forcePluginActivation="true"/>
+                </with>
+                <with variable="jpaPlatform">
+					<equals value="hibernate2_0"/>
+				</with>
+        	  </and>
+      		</enablement>
+    	</provider>
+  	</extension>
+  	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
+    	<provider id="hibernate36X-maven-library-provider" extends="maven-library-provider">
+      		<label>%Hibernate_3_6_X_Libraries</label>
+      		<param name="template" value="platform:/plugin/org.jboss.tools.maven.core/poms/hibernate36X-template.xml"/>
+      		<enablement>
+      		  <or>
+	      		  <and>
+	        		<with variable="projectFacets">
+	          			<test property="org.jboss.tools.maven.core.projectFacets" value="jpt.jpa,jboss.m2" forcePluginActivation="true"/>
+	        		</with>
+		        		<with variable="requestingProjectFacet">
+		                    <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:2.0" forcePluginActivation="true"/>
+		                </with>
+		                <with variable="jpaPlatform">
+							<equals value="hibernate2_0"/>
+						</with>
+	        	  </and>
+	      		  <and>
+	        		<with variable="projectFacets">
+	          			<test property="org.jboss.tools.maven.core.projectFacets" value="jpt.jpa,jboss.m2" forcePluginActivation="true"/>
+	        		</with>
+		        		<with variable="requestingProjectFacet">
+		                    <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:1.0" forcePluginActivation="true"/>
+		                </with>
+		                <with variable="jpaPlatform">
+							<equals value="hibernate"/>
+						</with>
+	        	  </and>
+				</or>
+      		</enablement>
+    	</provider>
+  	</extension>  	
   	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
     	<provider id="portlet10-maven-library-provider" extends="maven-library-provider">
       		<label>%Maven_Portlet_1_0_Libraries</label>
