--- a/central/plugins/org.jboss.tools.central.discovery/pom.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/pom.xml
@@ -8,6 +8,6 @@
 	</parent>
 	<groupId>org.jboss.tools.central.plugins</groupId>
 	<artifactId>org.jboss.tools.central.discovery</artifactId> 
-	
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 </project>
