--- a/central/features/pom.xml
+++ b/central/features/pom.xml
@@ -14,6 +14,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.central.feature</module>
+		<module>org.jboss.tools.community.central.feature</module>
 		<module>org.jboss.tools.central.discovery.feature</module>
 		<module>org.jboss.tools.central.test.feature</module>
 	</modules>
