JBIDE-9309 - Easily adding full JBoss AS source
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40535 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -26,6 +26,7 @@
 		<module>org.jboss.tools.maven.jpa.feature</module>
 		<module>org.jboss.tools.maven.profiles.feature</module>
 		<module>org.jboss.tools.maven.gwt.feature</module>
+		<module>org.jboss.tools.maven.sourcelookup.feature</module>
      </modules>
 
 	<repositories>
