JBIDE-11570 : different fixes : - do nothing if seam jar is not resolved - apply the proper JSF Facet version, as per the Seam Facet version requirements (currently hardcoded to JSF 1.2) - catch Constraint violation exceptions and turn them into error markers.
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40787 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
@@ -3,3 +3,4 @@ Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven Seam Configurator
 Seam_Project_configurator = Seam
 Fix_classpath = Fixing classpath
+Maven_Configuration_Problems=Maven Configuration Problems
