JBIDE-11235 - Recognize EAP/WFK maven repositories and add them into ~/.m2/settings.xml
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40823 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.properties
@@ -11,3 +11,6 @@ JBoss_Public_Repo_name=JBoss Public repository
 JBoss_Public_Repo_description=The JBoss Public repository is a composite repository of several major repositories
 JBoss_Releases_Repo_name=JBoss Releases repository
 JBoss_Releases_Repo_description=The JBoss Releases repository mostly contains JBoss projects artifacts
+
+JBossTools_Category = JBoss Tools
+Configure_Maven_Repositories = Configure Maven Repositories
