JBIDE-11738 : Solve/workaround the issue of needing endorsed libraries on Java 6 https://issues.jboss.org/browse/JBIDE-11738
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40911 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -27,6 +27,7 @@
 		<module>org.jboss.tools.maven.profiles.feature</module>
 		<module>org.jboss.tools.maven.gwt.feature</module>
 		<module>org.jboss.tools.maven.sourcelookup.feature</module>
+        <module>org.jboss.tools.maven.jdt.feature</module>
      </modules>
 
 	<repositories>
