--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>org.jboss.tools</groupId>
 		<artifactId>maven</artifactId>
 		<version>1.3.0-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jboss.tools.maven</groupId>
 	<artifactId>plugins</artifactId>
@@ -29,6 +30,7 @@
 		<module>org.jboss.tools.maven.gwt</module>
 		<module>org.jboss.tools.maven.sourcelookup.core</module>
 		<module>org.jboss.tools.maven.sourcelookup.ui</module> 
-	</modules>
+		<module>org.jboss.tools.maven.jdt</module>
+     </modules>
 </project>
 	
