--- a/maven/plugins/org.jboss.tools.maven.jdt/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.jdt/plugin.properties
@@ -1,3 +1,5 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven JDT Configurator
-Endorsed_Lib_Configurator_label = Endorsed lib configurator
+Endorsed_Lib_Configurator_label = Endorsed libraries configurator
+Maven_Configuration_Problem=Maven Configuration Problem
+Maven_Configuration_Problems=Maven Configuration Problems
