JBIDE-11738 : fixed container initializer reference
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41291 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.jdt/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.jdt/plugin.xml
@@ -11,7 +11,7 @@
               name="Endorsed Libraries">
       <classpathContainerInitializer
             id="org.jboss.tools.maven.jdt.ENDORSED_LIB_CLASSPATH_CONTAINER"
-            class="org.jboss.tools.maven.jdt.configurators.EndorsedLibrariesContainerInitializer"/>
+            class="org.jboss.tools.maven.jdt.internal.endorsedlib.EndorsedLibrariesContainerInitializer"/>
    </extension>
       
  	<extension point="org.eclipse.m2e.core.projectConfigurators">
