--- a/maven/plugins/org.jboss.tools.maven.core/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.properties
@@ -4,6 +4,7 @@ Bundle-Name = JBoss Maven Core
 JBoss_Maven_Integration=JBoss Maven Integration
 Adds_support_for_Maven=Adds support for Maven.
 Maven_library_provider=Maven library provider
+Maven_Hibernate_library_provider=Maven Hibernate library provider
 Maven_JSF_1_2_Libraries=Maven JSF 1.2 Libraries
 Maven_JSF_1_1_Libraries=Maven JSF 1.1 Libraries
 Maven_JSF_2_0_Libraries=Maven JSF 2.0 Libraries
