--- a/maven/plugins/org.jboss.tools.maven.core/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.xml
@@ -75,6 +75,15 @@
       		</action>
       		
     	</provider>
+    	
+    	<provider id="maven-hibernate-library-provider" abstract="true"  extends="maven-library-provider">
+      		<label>%Maven_Hibernate_library_provider</label>
+      		<priority>500</priority>
+      		<action type="INSTALL">
+        		<config class="org.jboss.tools.maven.core.libprov.MavenHibernateLibraryProviderInstallOperationConfig"/>
+        		<operation class="org.jboss.tools.maven.core.libprov.MavenLibraryProviderInstallOperation"/>
+      		</action>
+    	</provider>    	
   	</extension>
   	
   	 <extension point="org.eclipse.core.expressions.propertyTesters">
@@ -138,7 +147,7 @@
     	</provider>
   	</extension>  	
   	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
-    	<provider id="hibernate332-maven-library-provider" extends="maven-library-provider">
+    	<provider id="hibernate332-maven-library-provider" extends="maven-hibernate-library-provider">
       		<label>%Hibernate_3_3_2_Libraries</label>
       		<param name="template" value="platform:/plugin/org.jboss.tools.maven.core/poms/hibernate332-template.xml"/>
       		<enablement>
@@ -157,7 +166,7 @@
     	</provider>
   	</extension>
   	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
-    	<provider id="hibernate41X-maven-library-provider" extends="maven-library-provider">
+    	<provider id="hibernate41X-maven-library-provider" extends="maven-hibernate-library-provider">
       		<label>%Hibernate_4_1_X_Libraries</label>
       		<param name="template" value="platform:/plugin/org.jboss.tools.maven.core/poms/hibernate41X-template.xml"/>
       		<enablement>
@@ -168,15 +177,12 @@
         		<with variable="requestingProjectFacet">
                     <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:2.0" forcePluginActivation="true"/>
                 </with>
-                <with variable="jpaPlatform">
-					<equals value="hibernate2_0"/>
-				</with>
         	  </and>
       		</enablement>
     	</provider>
   	</extension>
   	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
-    	<provider id="hibernate36X-maven-library-provider" extends="maven-library-provider">
+    	<provider id="hibernate36X-maven-library-provider" extends="maven-hibernate-library-provider">
       		<label>%Hibernate_3_6_X_Libraries</label>
       		<param name="template" value="platform:/plugin/org.jboss.tools.maven.core/poms/hibernate36X-template.xml"/>
       		<enablement>
@@ -188,9 +194,6 @@
 		        		<with variable="requestingProjectFacet">
 		                    <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:2.0" forcePluginActivation="true"/>
 		                </with>
-		                <with variable="jpaPlatform">
-							<equals value="hibernate2_0"/>
-						</with>
 	        	  </and>
 	      		  <and>
 	        		<with variable="projectFacets">
@@ -199,14 +202,36 @@
 		        		<with variable="requestingProjectFacet">
 		                    <test property="org.eclipse.wst.common.project.facet.core.projectFacet" value="jpt.jpa:1.0" forcePluginActivation="true"/>
 		                </with>
-		                <with variable="jpaPlatform">
-							<equals value="hibernate"/>
-						</with>
 	        	  </and>
 				</or>
       		</enablement>
     	</provider>
   	</extension>  	
+  	
+	<extension
+        point="org.eclipse.jpt.common.core.libraryValidators">
+        <!-- Using a noop validator to fix https://issues.jboss.org/browse/JBIDE-11624 -->
+        <libraryValidator
+                id="jpaMavenLibraryValidator"
+                class="org.jboss.tools.maven.core.libprov.HibernateLibValidator">
+                <enablement>
+                     <or>
+                        <with variable="libraryProvider">
+                                <test property="org.eclipse.jpt.common.core.extendsId" value="hibernate41X-maven-library-provider"/>
+                        </with>
+                        <with variable="libraryProvider">
+                                <test property="org.eclipse.jpt.common.core.extendsId" value="hibernate36X-maven-library-provider"/>
+                        </with>
+                        <with variable="libraryProvider">
+                                <test property="org.eclipse.jpt.common.core.extendsId" value="hibernate332-maven-library-provider"/>
+                        </with>
+                     </or>
+                </enablement>
+        </libraryValidator>
+	</extension>  	
+  	
+  	
+  	
   	<extension point="org.eclipse.jst.common.project.facet.core.libraryProviders">
     	<provider id="portlet10-maven-library-provider" extends="maven-library-provider">
       		<label>%Maven_Portlet_1_0_Libraries</label>
