add connector for org.jboss.tools.maven.gwt.feature, which includes com.google.gdt.eclipse.suite.e37.feature; add requirement on org.jboss.tools.maven.gwt.feature to com.google.gdt.eclipse.suite.e37.feature too (provides com.google.gwt.eclipse.core 2.5.0 dependency)
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41367 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -53,6 +53,25 @@
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.maven"
             groupId="org.jboss.tools.central.discovery.maven.configurators"
+            description="JBoss Maven GWT Configurator"
+            id="org.jboss.tools.maven.gwt.feature"
+            kind="task"
+            license="Free, EPL"
+            name="JBoss Maven GWT Configurator"
+            provider="JBoss by Red Hat"
+            siteUrl="http://download.jboss.org/jbosstools/updates/development/indigo/central/core/">
+            <iu id="org.jboss.tools.maven.gwt.feature"/>
+            <iu id="com.google.gdt.eclipse.suite.e37.feature"/>
+         <icon
+               image32="images/jbosstools_icon32.png">
+         </icon>
+         <overview
+               url="http://www.jboss.org/tools">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.maven"
+            groupId="org.jboss.tools.central.discovery.maven.configurators"
             description="JBoss Maven Hibernate Configurator"
             id="org.jboss.tools.maven.hibernate.feature"
             kind="task"
