--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -78,7 +78,7 @@
     <extension
         point="org.jboss.tools.project.examples.projectExamplesXml"
         name="Shared examples">
-        <url>http://download.jboss.org/jbosstools/examples/project-examples-shared-3.3.CR1.xml</url>
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-shared-3.3.GA.xml</url> 
         <experimental>false</experimental>
     </extension>
     
