JBIDE-12012 smooks removed from jbosstools svn
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41442 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/org.jboss.tools.maven.sourcelookup.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.sourcelookup.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Tools Source Lookup
+description=Provides a mechanism to lookup source code found in JBoss Servers and other runtimes based on jars Maven metadata. Instant debugging without having to digg out the source code manually.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2008-2012 Red Hat, Inc. and others.\nAll rights reserved. This program and the accompanying materials\n 
