--- a/maven/features/org.jboss.tools.maven.gwt.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.gwt.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven GWT Configurator
+description=Help configure Google Web Toolkit tooling in Eclipse based on your Maven pom.xml file.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2012 Red Hat, Inc. and others.\n\
