--- a/maven/features/org.jboss.tools.maven.project.examples.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.project.examples.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Project Examples
+description=Enables Project Examples to be Maven projects. 
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2012 Red Hat, Inc. and others.\n\
