JBIDE-11324 missing feature descriptions
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.3.x@41593 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/org.jboss.tools.maven.hibernate.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.hibernate.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Hibernate Configurator
+description=Provides automatic enablement of Hibernate/Dali JPA tooling features for Maven projects. 
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2012 Red Hat, Inc. and others.\n\
