--- a/maven/features/org.jboss.tools.maven.cdi.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.cdi.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven CDI Configurator
+description=Enables CDI tooling on Maven projects that depends or contain CDI specific artifacts. 
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2012 Red Hat, Inc. and others.\n\
