JBDS-2189 remove jslint from Central
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41696 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -328,7 +328,7 @@
                url="http://findbugs.sourceforge.net/">
          </overview>
       </connectorDescriptor>
-      <connectorDescriptor
+      <!-- JBDS-2189 remove <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
             groupId="org.jboss.tools.central.discovery.testing.local"
             description="Tool support for JSLint"
@@ -349,7 +349,7 @@
          <overview
                url="http://www.jslint.com/">
          </overview>
-      </connectorDescriptor>
+      </connectorDescriptor> -->
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
             groupId="org.jboss.tools.central.discovery.testing.local"
