to get build back woking hibernate jpa and mavem gwt configurator plugins are excluded from aggregation pom.xml's due to: -hibernate jpa plugins  required migration -maven gwt configurator dependes on google plugins not compatible with Juno
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41949 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -25,8 +25,8 @@
 		<module>org.jboss.tools.maven.jbosspackaging.feature</module>	
 		<module>org.jboss.tools.maven.jpa.feature</module>
 		<module>org.jboss.tools.maven.profiles.feature</module>
-		<module>org.jboss.tools.maven.gwt.feature</module>
+		<!--module>org.jboss.tools.maven.gwt.feature</module-->
 		<module>org.jboss.tools.maven.sourcelookup.feature</module>
-        <module>org.jboss.tools.maven.jdt.feature</module>
+	        <module>org.jboss.tools.maven.jdt.feature</module>
      </modules>
 </project>
