JBIDE-12180 - icon for Configure Maven Repository is too big
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42010 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
@@ -154,7 +154,7 @@
     <wizard
           category="org.jboss.ide.eclipse.ui.wizards"
           class="org.jboss.tools.maven.ui.wizard.ConfigureMavenRepositoriesWizard"
-          icon="icons/repo_wiz.gif"
+          icon="icons/configure_maven_repo.gif"
           id="org.jboss.tools.maven.ui.wizard.ConfigureMavenRepositoriesWizard"
           name="%Configure_Maven_Repositories">
     </wizard>
